--- a/main_app/templates/registration/profile.html
+++ b/main_app/templates/registration/profile.html
@@ -39,7 +39,7 @@
                         <th>Action</th>
                     </tr>
 
-                    {% for activity in user.activity_set.all %}
+                    {% for activity in profile.activity_set.all %}
                     <tr>
                         <td>{{activity.name}}</td>
                         <td>
@@ -58,12 +58,13 @@
                 <!--   Modal pop up to so you can ADD AN ACTIVITY -->
                 <div id="modal1" class="modal">
                     <div class="modal-content">
-                        <h4>Add Activity:
+                        <h4>Add Activity: </h4>
                             <a style="float: right;" href="#!" class="modal-close waves-effect waves-green btn-flat">X</a></h4>
-                        <form action="{% url 'activity_create' profile.id %}" method="post">
-                            {% csrf_token %} {{ activity_form.as_p }}
-                            <input type="submit" class="btn" value="Add Activity">
-                        </form>
+                                <form action="{% url 'activity_create' profile.id %}" method="post">
+                                    {% csrf_token %}
+                                    {{ activity_form.as_p }}
+                                    <input type="submit" class="btn" value="Add Activity">
+                                </form>
                     </div>
                     <div class="modal-footer">
                     </div>
