--- a/main_app/templates/registration/profile.html
+++ b/main_app/templates/registration/profile.html
@@ -14,7 +14,7 @@
                         <li>
                             <h2> Hello, <span>{{user.username}}</span> </h2>
                         </li>
-                        <li><b>Location: </b> <span>location here</span></li>
+                        <li><b>Location: </b> <span>{{ profile.location }}location here</span></li>
                         <li><b>Edit Profile </b></li>
                     </ul>
                 </div>
