--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -2,8 +2,8 @@
 
 <div class="container">
   <div class="row">
-    <h5 class="center">Global Stats</h5>
-    <p class="center">LAST UPDATED: 06/10/20</p>
+    <h5 class="center">GLOBAL STATS</h5>
+    <p class="center"></p>
     <div class="col s4">
       <a
         href
