--- a/main_app/templates/registration/profile.html
+++ b/main_app/templates/registration/profile.html
@@ -81,8 +81,8 @@
       <select multiple name="activity">
       <option disabled="" selected="">SELECT ACTIVITY</option>
                 {% for u in user_activities %}
-                <option title="{{u.title}} value="{{u.title}}"
-                  >{{u.title}}</option
+                <option title="{{u}} value="{{u}}"
+                  >{{u}}</option
                 >
                 {% endfor %}
               </select>
