added activty_name to routine model

--- a/main_app/templates/registration/profile.html
+++ b/main_app/templates/registration/profile.html
@@ -84,7 +84,7 @@
                 {% for activity in user_activities %} 
                 {% comment %} routine needs to be local to profile {% endcomment %}
                 <option title="{{activity}}" value="{{activity}}" name="activity"
-                  >{{u}}</option
+                  >{{activity}}</option
                 >
                 {% endfor %}
               </select>
