--- a/main_app/templates/registration/profile.html
+++ b/main_app/templates/registration/profile.html
@@ -83,8 +83,8 @@
       <option disabled="" selected="">SELECT ACTIVITY</option>
                 {% for u in user_activities %} 
                 {% comment %} routine needs to be local to profile {% endcomment %}
-                <option title="{{u.title}}" value="{{u.title}}" name="activity"
-                  >{{u.title}}</option
+                <option title="{{u}}" value="{{u}}" name="activity"
+                  >{{u}}</option
                 >
                 {% endfor %}
               </select>
@@ -116,8 +116,8 @@
                     </tr>
                     {% for r in routine %}
                     <tr>
-                        <td>{{r.activity}}</td>
                         <td>{{r.date}}</td>
+                        <td>{{r.activity}}</td>
                         <td>
                             <form action="/routine/delete/{{r.id}}" method="POST" >{% csrf_token %} 
                 
