--- a/main_app/templates/registration/profile.html
+++ b/main_app/templates/registration/profile.html
@@ -5,9 +5,18 @@
         <div class="card-panel grey lighten-5 z-depth-1">
             <div class="row valign-wrapper">
                 <div class="col s2">
-
                     <!-- Profile image - with the circle class -->
-                    <img src="http://www.american.edu/uploads/profiles/large/chris_palmer_profile_11.jpg" alt="" class="circle responsive-img">
+                {% for photo in profile.photo_set.all %}
+                <img class="responsive-img card-panel" src="{{photo.url}}">
+                {% empty %}
+               <img src="http://www.american.edu/uploads/profiles/large/chris_palmer_profile_11.jpg" alt="" class="circle responsive-img">
+                {% endfor %}
+                    <form action="{% url 'add_photo' profile.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+    {% csrf_token %}
+    <input type="file" name="photo-file">
+    <br><br>
+    <input type="submit" class="btn" value="Upload Photo">
+</form>
                 </div>
                 <div class="col s10">
                     <ul>
