--- a/main_app/templates/registration/profile.html
+++ b/main_app/templates/registration/profile.html
@@ -15,6 +15,7 @@
                             <h2> Hello, <span>{{user.username}}</span> </h2>
                         </li>
                         <li><b>Location: </b> <span>{{ profile.location }}</span></li>
+                        <li><a href="{% url 'profile_update' profile.id %}" class="waves-effect waves-light btn-small" >Edit Profile</a></li>
                         <li><b>Edit Profile </b></li>
                     </ul>
                 </div>
