--- a/main_app/templates/dashboard.html
+++ b/main_app/templates/dashboard.html
@@ -1,211 +1,146 @@
 {% extends 'base.html' %} {% block content %}
 
-
 <div class="container">
   <div class="row">
-    <h5 class="center">{{location.upper}} STATS</h5>
-    <p class="center">LAST UPDATED: {{last_updated}}</p>
+    <h5 class="center">{{location.upper}}</h5>
+    <p class="center">UPDATED: {{last_updated}}</p>
     <div class="col s4">
+      {% comment %}
       <a
         href
         class="tooltipped"
         data-position="bottom"
         data-tooltip="+{{user_country.NewConfirmed}}"
-        ><div class="card-panel red lighten-1">
-          <span class="white-text">{{user_country.TotalConfirmed}}</span>
+      >
+        {% endcomment %}
+        <div class="card-panel red lighten-1">
+          <span class="white-text">{{user_country_with_NA.Infected}}</span>
         </div></a
       >
 
       <p class="data-label">TOTAL CASES</p>
     </div>
     <div class="col s4">
+      {% comment %}
       <a
         href
         class="tooltipped"
         data-position="right"
         data-tooltip="+{{user_country.NewDeaths}}"
-        ><div class="card-panel red lighten-1">
-          <span class="white-text center">{{user_country.TotalDeaths}}</span>
+      >
+        {% endcomment %}
+        <div class="card-panel red lighten-1">
+          <span class="white-text center"
+            >{{user_country_with_NA.TotalDeaths}}</span
+          >
         </div></a
       >
       <p class="data-label">TOTAL DEATHS</p>
     </div>
     <div class="col s4">
+      {% comment %}
       <a
         href
         class="tooltipped"
         data-position="bottom"
         data-tooltip="+{{user_country.NewRecovered}}"
       >
+        {% endcomment %}
         <div class="card-panel red lighten-1">
-          <span class="white-text">{{user_country.TotalRecovered}}</span>
+          <span class="white-text"
+            >{{user_country_with_NA.TotalRecovered}}</span
+          >
         </div></a
       >
       <p class="data-label">TOTAL RECOVERED</p>
     </div>
   </div>
 
-<div class="container center">
-  <div class="row">
-    <div class="col 12" style="position: relative; height: 100%; width: 100%;">
-      <canvas id="myChart"></canvas>
+  <div class="container center">
+    <div class="row">
+      <div
+        class="col 12"
+        style="position: relative; height: 100%; width: 100%;"
+      >
+        <canvas id="myChart"></canvas>
+      </div>
     </div>
   </div>
-</div>
 
   <div class="container center">
-    <div class="row"><h5 class="center">MY STUFF</h5>
-      {% comment %} 
-<div class="col s6"> {% endcomment %}
-  
-  {% comment %} <h6>My Activities</h6>
+    <div class="row">
+      <h5 class="center">MY STUFF</h5>
 
-  
-  <form class="col s12" method="post" action="{% url 'dashboard' %}">{% csrf_token %} 
-        <div class="input-field">
-          <select multiple name="activity">
-            <!-- Add for loop an generate a value for each activity we have when we have data make sure to add the id of the curent activity to the value too-->
-            <option disabled="" selected="">SELECT ACTIVITY</option>
-            {% for u in user_activities %}
-            <option title="{{u.title}} value="{{u.title}}"
-              >{{u.title}}</option
-            >
-            {% endfor %}
-          </select>
-        </div>
-        <input
-          type="submit"
-          value="ADD"
-          class="btn #66bb6a green lighten-1"
-        />
-        <!-- <input
-        type="submit"
-        value="Results"
-        data-target="modal2"
-        class="btn #66bb6a green lighten-1 modal-trigger"
-      />  -->
-      </form></div> {% endcomment %}
+      <div class="col s6">
+        <h6>My Activities</h6>
+        <table class="striped">
+          <tbody>
+            {% if user_activities %} {% for u in user_activities %}
+            <tr>
+              <td>{{u}}</td>
+            </tr>
+            {% endfor %} {% else %}
+            <tr>
+              <td class="center">You Have No Activities!</td>
+            </tr>
+            {% endif %}
+          </tbody>
+        </table>
+      </div>
 
-
-
-<div class="col s6"><h6>My Activities</h6>
-  <table class="striped">
-    <tbody>
-{% for u in user_activities %}
-      <tr>
-        <td>{{u}}</td>
-      </tr>
-    {% endfor %}
-    </tbody>
-  </table>
-</div>
-
-{% comment %} if the routine has a date equal to todays date then pass them here {% endcomment %}
-
-
-
-<div class="col s6"><h6>Today</h6>
-  <table class="striped">
-    <tbody>
-    <tr>
-      <th class="center">{{current_date}}</th>
-      </tr>
-      {% for a in today_routine%}
-      <tr>
-        <td>{{a}}</td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-</div>
-
-      <div id="modal2" class="modal">
-        <div class="modal-content">
-          <!-- show different headings depending on risk factor -->
-          {% if activity.0.factor <= 4 %}
-          <h4>YOU'RE NOT THAT RISKY</h4>
-          {% elif activity.0.factor <= 6 and  activity.0.factor > 4 %}
-          <h4>YOU'RE A LITTLE RISKY</h4>
-          {% elif activity.0.factor <= 10 and activity.0.factor > 6 %}
-          <h4>YOU'RE VERY RISKY</h4>
-          {% endif %}
-          {% if selected_activities %}
-          {% for a in selected_activities %}
-          <p><b>{{a}}</b>&nbsphas a <b>{{activity.0.risk}}</b> risk level</p>
-          <!-- Take factors for all activities and find an average, if the number is a certain number assign it a risk level -->
-          {% endfor %}
-          {% else %}
-          <p>No activity selected</p>
-          {%endif%} 
-          <p>Your overall risk level is</p>
-        </div>
-        <div class="modal-footer">
-          <a href="#!" class="modal-close waves-effect waves-green btn-flat" 
-            >OK</a
-          > 
-        </div>
+      <div class="col s6">
+        <h6>Today</h6>
+        <table class="striped">
+          <tbody>
+            <tr>
+              <th class="center">{{current_date}}</th>
+            </tr>
+            {% if today_routine %} {% for activity in today_routine%}
+            <tr>
+              <td>{{activity.0}}</td>
+            </tr>
+            {% endfor %} {% else %}
+            <tr>
+              <td class="center">Your Day is Empty!</td>
+            </tr>
+            {% endif %}
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
 </div>
 
 <script>
-  $(document).ready(function () {
-    $("select").formSelect();
-  });
-  $(document).ready(function () {
-    $(".tooltipped").tooltip();
-  });
-  $(document).ready(function () {
-    $(".modal").modal();
-  });
+    $(document).ready(function () {
+      $("select").formSelect();
+    });
+    $(document).ready(function () {
+      $(".tooltipped").tooltip();
+    });
+    $(document).ready(function () {
+      $(".modal").modal();
+    });
 
 
 
   var ctx = document.getElementById('myChart').getContext('2d');
-var myChart = new Chart(ctx, {
-    type: 'bar',
-    data: {
-        datasets: [{
-            data: [{{user_country.TotalConfirmed}},{{user_country.TotalDeaths}}, {{user_country.TotalRecovered}}],
-            label: 'Total Cases',
-            backgroundColor: "#D54B5F",
-            // This binds the dataset to the left y axis
-            yAxisID: 'left-y-axis'
-        }, {
-            data: [{{user_country.NewConfirmed}},{{user_country.NewDeaths}}, {{user_country.NewRecovered}}],
-            label: 'New Cases',
-            backgroundColor: "#5CA4BF",
-            // This binds the dataset to the right y axis
-            yAxisID: 'right-y-axis'
-        }],
-        labels: ['Confirmed','Deaths','Recovered']
-    },
-    options: {
-        scales: {
-            yAxes: [{
-                id: 'left-y-axis',
-                type: 'linear',
-                position: 'left',
-                ticks: {
-                        min: 0,
-                        beginAtZero: true,
-                        stepSize: 20000
-              }
-            }, {
-                id: 'right-y-axis',
-                type: 'linear',
-                position: 'right',
-                ticks: {
-                        min: 0,
-                        beginAtZero: true,
-                        stepSize: 50
-              }
-            }]
-        }
-    }
-}); 
 
+  var myChart = new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: ["Confirmed", "Deaths", "Recovered"],
+        datasets: [
+          {
+            backgroundColor: ["#3e95cd", "#8e5ea2","#3cba9f","#e8c3b9","#c45850"],
+            data: [{{user_country.1}},{{user_country.3}},{{user_country.2}}]
+          }
+        ]
+      },
+      options: {
+        legend: { display: false },
+      }
+  });
 </script>
 
 {% endblock %}
