--- a/main_app/templates/dashboard.html
+++ b/main_app/templates/dashboard.html
@@ -1,4 +1,48 @@
 {% extends 'base.html' %} {% block content %}
+<div class="container">
+  <div class="row">
+    <h5 class="center">GLOBAL STATS</h5>
+    <p class="center"></p>
+    <div class="col s4">
+      {% comment %} <a
+        href
+        class="tooltipped"
+        data-position="bottom"
+        data-tooltip="+{{global_stats.NewConfirmed}}"
+        > {% endcomment %}
+        <div class="card-panel red lighten-1">
+          <span class="white-text">{{global_stats.total_infected}}</span>
+        </div></a>
+
+      <p class="data-label">TOTAL CASES</p>
+    </div>
+    <div class="col s4">
+      {% comment %} <a
+        href
+        class="tooltipped"
+        data-position="right"
+        data-tooltip="+{{global_stats.NewDeaths}}"
+        > {% endcomment %}
+        <div class="card-panel red lighten-1">
+          <span class="white-text center">{{global_stats.total_deaths}}</span>
+        </div></a
+      >
+      <p class="data-label">TOTAL DEATHS</p>
+    </div>
+    <div class="col s4">
+      {% comment %} <a
+        href
+        class="tooltipped"
+        data-position="bottom"
+        data-tooltip="+{{global_stats.NewRecovered}}"
+      > {% endcomment %}
+        <div class="card-panel red lighten-1">
+          <span class="white-text">{{global_stats.total_recovered}}</span>
+        </div></a
+      >
+      <p class="data-label">TOTAL RECOVERED</p>
+    </div>
+  </div>
 
 <div class="container">
   <div class="row">
