--- a/main_app/templates/registration/profile.html
+++ b/main_app/templates/registration/profile.html
@@ -32,7 +32,7 @@
                 <div class="col s10">
                     <ul>
                         <li>
-                            <h2> Hello, <span>{{user.username}}</span> </h2>
+                            <h2> Hello, <span>{{profile.name}}</span> </h2>
                         </li>
                         <li><b>Location: </b> <span>{{ profile.location }}</span></li>
                         <li><a href="{% url 'profile_update' profile.id %}" class="waves-effect waves-light btn-small" >Edit Profile</a></li>
