--- a/main_app/templates/main_app/activity_form.html
+++ b/main_app/templates/main_app/activity_form.html
@@ -2,10 +2,11 @@
 {% block content %}
 
 <form method="post" >
+  {% csrf_token %}
+  {{form.as_p}} 
+  <button type="submit" class="btn btn-default">Submit</button>
+</form>
 
-{% csrf_token %}
-{{form.as_p}} 
-<button type="submit" class="btn btn-default">Submit</button></form>
 <script>
 $(document).ready(function() {
 var selectEl = document.getElementById('id_venue');
@@ -19,3 +20,4 @@ var selectEl = document.getElementById('id_venue');
 });
 </script>
 {% endblock %}
+
