--- a/main_app/templates/main_app/activity_confirm_delete.html
+++ b/main_app/templates/main_app/activity_confirm_delete.html
@@ -1,12 +1,14 @@
 {% extends 'base.html' %} {% block content %}
-<h1>
-    Delete Activity</h1>
+<section class="forms">
+<h3>
+    Delete Activity</h3>
 
-<h4>Are you sure you want to delete <span class="black-text">{{ object.name }}</span>?</h4>
+<h6>Are you sure you want to delete <span class="black-text">{{ object.name }}</span>?</h6>
 
 <form action="" method="POST">
     {% csrf_token %}
-    <input type="submit" value="Yes - Delete!" class="btn">
-    <a href="{% url 'show' %}">Cancel</a>
+    <input type="submit" value="Yes - Delete!" class="btn red">
+    <a href="{% url 'show' %}"><button class="btn blue">Cancel</button></a>
 </form>
+</section>
 {% endblock %}
