--- a/main_app/templates/main_app/profile_form.html
+++ b/main_app/templates/main_app/profile_form.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
-
+<section class="forms">
+<h4>Profile</h4>
 <form method="post" >
 
 {% csrf_token %}
 {{form}} 
-<button type="submit" class="btn btn-default">Submit</button></form>
-
+<button type="submit" class="btn btn-default blue">Submit</button></form>
+</section>
 {% endblock %}
