--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -69,11 +69,26 @@ form.signup ul li {
     background-color: #4CAF50;
 }
 
+
 @media only screen and (max-width: 600px) {
     .card-panel {
         border-radius: 15px;
         font-size: 20px;
         text-align: center;
+    }
+    a.brand-logo.center {
+        font-size: 15px;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .card-panel {
+        border-radius: 15px;
+        font-size: 20px;
+        text-align: center;
+    }
+    a.brand-logo.center {
+        font-size: 20px;
     }
 }
 
